# pythia

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE-MIT  README.md  Vagrantfile  askama.toml  body.json  body0.json  body1.json  build.rs  docker-compose.yml  package-lock.json  package.json  terraform.tfstate
.devcontainer/infra/: devcontainer.json
.devcontainer/rust/: devcontainer.json
.github/workflows/: deploy.yml  rust.yml  teardown.yml
data/: arc.pl  changes.pl  db.pl  dimlink.pl  edge.pl  record.pl  transaction.pl  types.json
data/internal/: pythia.pl
doc/example/: StateChangeLogger.java
infra/: .gitignore  .terraform.lock.hcl  cloudflare.tf  main.tf  nat.tf  providers.tf  terraform.tf  variables.tf
infra/bootstrap/: imports.tf  main.tf  s3.tf  variables.tf
infra/ecr/: main.tf  outputs.tf  variables.tf
src/: input.css  main.rs
src/middleware/: session.rs  user_token.rs
src/models/: contact.rs  fact.rs  goal.rs  logic_machine.rs  mod.rs  record_type.rs  state.rs
src/routes/: fact.rs  help.rs  inquiry.rs  knowledge_base.rs  mod.rs  record_type.rs  session.rs  state_change.rs
src/routes/api/: mod.rs  record_type.rs
src/services/: db.rs  fact.rs  logic_machine.rs  mod.rs  persist.rs  record_type.rs  session.rs  state.rs  state_change.rs
src/static/: style.css
src/utils/: codegen.rs  mod.rs  tracking.rs
static/: style.css
templates/: add-new-fact-button.html  change-path-list-view.html  change-path-table-view.html  change-path-table.html  fact-table.html  facts-table.html  facts.html  hello.html  how-to-use.html  how_to_use.html  index.html  inquiries.html  layout.html  new-fact.html  pythia.pl  set-end-state-field-to-specified.html  set-end-state-field-to-unspecified.html  set-field-to-specified.html  set-field-to-unspecified.html  start-session.html  state-changes-output.html  state-changes.html  state.html  update_start_state_result.html
templates/fact/: add-new-fact-button.html  facts-table.html  facts.html  new-fact.html
templates/prolog/: fact.pl  pythia.pl
templates/record-type/: add-new-record-type-button.html  new-record-type.html  record-type-table.html  record-types.html
templates/state-change/: change-path-list-view.html  change-path-table-view.html  set-field-to-specified.html  set-field-to-unspecified.html  state-changes-output.html  state-changes.html
tests/: integration_test.rs
