[package]
name = "pythia"
version = "0.1.0-dev.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies]
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.4.0"
axum = "0.7.2"
axum-macros = "0.4.1"
scryer-prolog = "0.9.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0.58"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.13.1", features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
] }
nom = "8"
log = "0.4.27"
env_logger = "0.11.8"
tower-http = { version = "0.6.6", features = ["fs"] }
aws-config = {version = "1.8.2", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = "1.83.0"
axum-extra = { version = "0.9", features = ["cookie", "typed-header"] }
time = "0.3.41"
base64 = "0.22.1"
