[package]
name = "pythia"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[build-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies]
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.4.0"
axum = "0.7.2"
axum-macros = "0.4.1"
scryer-prolog = "0.9.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0.58"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.13.1", features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
] }
nom = "8"
log = "0.4.27"
env_logger = "0.11.8"
tower-http = { version = "0.6.6", features = ["fs"] }
aws-config = { version = "1.8.2", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = "1.83.0"
axum-extra = { version = "0.9", features = ["cookie", "typed-header"] }
time = "0.3.41"
base64 = "0.22.1"
quick_cache = "0.6.16"
